finised writing tests. Rewritten code so it functions